refactoring and minor updates... - alert component is now updated and supports closing with animation - html file is updated and contains fixes for multiple issue references - gulp tasks have been improved and now support script compiling - modular structure possible, but not being used for now - source structure changed a bit - code block absolute positioned text now fixed to be within its container, even tho this component is still so bad - minor spacing polish and alignment of previous contributors

--- a/src/styles/components/_code.scss
+++ b/src/styles/components/_code.scss
@@ -1,4 +1,5 @@
 .code {
+    position: relative;
     background-color: $light-gray;
     color: $black;
     display: inline-block;
